--- a/.envEXAMPLE
+++ b/.envEXAMPLE
@@ -3,3 +3,8 @@ DBUSER=sap_user
 DBPASS=PASSWORD
 DBHOST=localhost
 DBPORT=5432
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_HOST_USER=nsasapattendance@gmail.com
+EMAIL_HOST_PASSWORD=pass
+EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
