--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
 Django==2.1.3
 django-autofixture==0.12.1
 django-modern-rpc==0.11.1
+django-seed==0.1.9
+Faker==1.0.0
+mysqlclient==1.3.12
 psycopg2==2.7.6
+pyotp==2.2.7
+python-dateutil==2.7.5
 python-decouple==3.1
 pytz==2018.7
-django-seed
+six==1.11.0
+text-unidecode==1.2
