--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,7 @@ addons:
       - master
 script:
   - sonar-scanner -Dsonar.projectKey=NSASAPBackEnd -Dsonar.sources=sap
+branches:
+  only:
+  - master
+  - develop
