--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ install:
   - pip install -r requirements.txt
 # command to run tests
 addons:
+  postgresql: "9.4"
   sonarcloud:
     organization: "boumanb-github"
     token:
