--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+bcrypt==3.1.5
+certifi==2018.11.29
+cffi==1.11.5
+chardet==3.0.4
 coverage==4.5.2
 Django==2.1.3
 django-autofixture==0.12.1
@@ -5,11 +9,15 @@ django-jenkins==0.110.0
 django-modern-rpc==0.11.1
 django-seed==0.1.9
 Faker==1.0.0
+gunicorn==19.9.0
+idna==2.8
 psycopg2==2.7.6
+pycparser==2.19
 pyotp==2.2.7
 python-dateutil==2.7.5
 python-decouple==3.1
 pytz==2018.7
+requests==2.21.0
 six==1.11.0
 text-unidecode==1.2
-gunicorn==19.9.0
+urllib3==1.24.1
