--- a/.envEXAMPLE
+++ b/.envEXAMPLE
@@ -14,3 +14,4 @@ RL_TOKEN_REFILL_TIME=10
 RL_TOKEN_REFILL_AMOUNT=1
 RL_EXCLUDED_RPC_METHODS=login,echo
 DEBUG=False
+BASE_URL_W_TRAILING_SLASH=http://127.0.0.1:8000/
